# parrot_fashion

./: README.md  hello.py  push_parrot_fashion.bat
backend/: .gitignore  pyproject.toml  run_server.bat  server.py
crawler/: autosub_tool.py  caption_download.py  faster_whisper_demo.py  format.py  gen_anki.py  get_youtube.py  loop.py  loop_trans_srt.py  loop_whisper.py  operate_srt.py  pyproject.toml  tool.py  tts_deck.py  ydl.py
frontend/: README.md  index.html  package.json
frontend/src/components/: App.tsx  analyzeSrt.tsx  config.ts  control.tsx  fetchConfig.tsx  fetchData.tsx  plugins.tsx  processData.ts  recoverRead.ts  sync.tsx
frontend/src/components/Avatar/: audio_template.ts  pluginsChildren.tsx
frontend/src/plugin/viewPlugin/: children.tsx  demo.ts  index.ts  template.ts
recorder/: .gitignore  autosub_tool.py  deeplx.py  gen_anki.py  get_srt.py  import_apkg.py  loop.py  pyproject.toml  readme.md  rewrite_text.py  run_whisper.py  template.py  test.py  tool.py  tts_anki.py  tts_deck.py  tts_deeplx.py
