[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = ""},
]
dependencies = [
    "uvicorn>=0.17.6",
    "fastapi>=0.78.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
