[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "yt-dlp>=2023.1.6",
    "ffmpeg-normalize>=1.26.1",
    "langcodes>=3.3.0",
    "fire>=0.5.0",
    "pysrt>=1.1.2",
    "python-Levenshtein>=0.20.9",
    "genanki>=0.13.0",
    "autosub @ git+https://github.com/BingLingGroup/autosub.git@dev",
]
requires-python = ">=3.10"
license = {text = "MIT"}
