
[project]
name = ""
version = "1.0"
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "fire>=0.6.0",
    "rich>=13.7.1",
    "pysrt>=1.1.2",
    "genanki>=0.13.1",
    "requests>=2.32.3",
    "autosub @ git+https://github.com/BingLingGroup/autosub.git@dev",
    "setuptools>=70.0.0",
    "grequests>=0.7.0",
]
requires-python = "==3.10.*"
license = {text = "MIT"}
